--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,9 @@
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": ">=10.8.2"
   }
 }
