--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/fitforge
+MONGO_URI=mongodb+srv://nthuang:NathanH007@cluster0.d891w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 EXERCISE_DB_API_KEY=0b35dce02fmsh24a4e513e683a5fp18f2dfjsnd2449aaf0d12
