--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "cd ../frontend && npm install && npm run build",
+    "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.0"
   },
   "description": "",
@@ -23,6 +26,6 @@
   },
   "engines": {
     "node": "20.x",
-    "npm": ">=10.8.2"
+    "npm": "10.x"
   }
 }
