--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cd frontend && npm run build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node backend/server.js", 
+    "frontend": "cd frontend && npm start", 
+    "build": "cd frontend && npm run build", 
+    "test": "cd frontend && npm test", 
+    "heroku-postbuild": "cd frontend && npm install && npm run build" 
   },
   "eslintConfig": {
     "extends": [
