--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js", 
-    "build": "cd ../frontend && npm install && npm run build", 
-    "heroku-postbuild": "cd ../frontend && npm install && npm run build", 
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1" 
   },
   "keywords": [],
