--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "start": "node backend/server.js",
     "frontend": "cd frontend && npm start",
     "build": "cd frontend && npm run build",
-    "test": "cd frontend && npm test",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "test": "cd frontend && npm test"
   },
   "eslintConfig": {
     "extends": [
